--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <div class="message-card"><i class="fas fa-star card-icon"></i><h2 class="card-title">Harapan Terbaik</h2><p class="card-text" id="bestWishesText"></p></div>
                 <div class="message-card"><i class="fas fa-heart card-icon"></i><h2 class="card-title">Jadilah Kuat</h2><p class="card-text" id="stayStrongQuoteText"></p></div>
             </div>
-            <div class="message-card" style="margin-top: 30px;">
+            <div class="message-card" style="margin-top: 30px; text-align: center;">
                 <h2 class="card-title">Ada Sesuatu Untukmu...</h2>
                 <button class="btn gift-btn" onclick="openGift()"><i class="fas fa-gift"></i> Klaim Hadiahmu</button>
             </div>
