--- a/admin.html
+++ b/admin.html
@@ -518,7 +518,7 @@ Untuk masuk, gunakan detail berikut ya:
 👤 *Username:* ${guestUser}
 🔑 *Password:* ${guestPass}
 
-Jangan lupa, kamu bisa login untuk melihat ucapan dan kado dari teman-temanmu! ✨`.trim();
+*Jangan lupa login ada hadiah menunggumu!*✨`.trim();
 
                     Swal.fire({
                         title: 'Data Berhasil Disimpan!',
