--- a/register.html
+++ b/register.html
@@ -223,28 +223,28 @@
             <div class="header">
                 <div class="header-icon"><i class="fas fa-user-plus"></i></div>
                 <h1>Buat Akun Baru</h1>
-                <p>Mari kita mulai!</p>
+                <p>lest go the party!</p>
             </div>
             <form id="registerForm" onsubmit="event.preventDefault(); createAccount();">
                 <div class="input-group">
-                    <label for="adminName">Nama Admin</label>
+                    <label for="adminName"> Your name</label>
                     <div class="input-wrapper">
-                        <input type="text" id="adminName" class="input-field" placeholder="Masukkan username Anda" required>
+                        <input type="text" id="adminName" class="input-field" placeholder="username" required>
                         <i class="fas fa-user icon-left"></i>
                     </div>
                 </div>
                 <div class="input-group">
                     <label for="adminPass">Password</label>
                     <div class="input-wrapper">
-                        <input type="password" id="adminPass" class="input-field" placeholder="Masukkan password Anda" required>
+                        <input type="password" id="adminPass" class="input-field" placeholder=" password anda" required>
                         <i class="fas fa-key icon-left"></i>
                         <i class="fas fa-eye-slash icon-right" onclick="togglePasswordVisibility('adminPass', this)"></i>
                     </div>
                 </div>
                 <div class="input-group">
-                    <label for="repeatPass">Ulangi Password</label>
+                    <label for="repeatPass">Repeat Password</label>
                     <div class="input-wrapper">
-                        <input type="password" id="repeatPass" class="input-field" placeholder="Ulangi password Anda" required>
+                        <input type="password" id="repeatPass" class="input-field" placeholder="ulangi password anda" required>
                         <i class="fas fa-key icon-left"></i>
                         <i class="fas fa-eye-slash icon-right" onclick="togglePasswordVisibility('repeatPass', this)"></i>
                     </div>
