--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             <div class="card-grid">
                 <div class="message-card"><i class="fas fa-calendar-check card-icon"></i><h2 class="card-title">Level Baru Terbuka!</h2><p class="card-text" id="ageDisplay"></p></div>
                 <div class="message-card"><i class="fas fa-star card-icon"></i><h2 class="card-title">Harapan Terbaik</h2><p class="card-text" id="bestWishesText"></p></div>
-                <div class="message-card"><i class="fas fa-heart card-icon"></i><h2 class="card-title">Tetap Kuat</h2><p class="card-text" id="stayStrongQuoteText"></p></div>
+                <div class="message-card"><i class="fas fa-heart card-icon"></i><h2 class="card-title">Teruntuk kamu di hari yang istimewah</h2><p class="card-text" id="stayStrongQuoteText"></p></div>
             </div>
             <div class="gift-section-card message-card" id="giftSectionCard">
                 <h2 class="card-title">Ada Sesuatu Untukmu...</h2>
