--- a/admin.html
+++ b/admin.html
@@ -391,7 +391,7 @@
                                     <div class="input-wrapper"><textarea id="bestWishesInput" class="input-field" rows="4" placeholder="Masukkan harapan terbaik..."></textarea></div>
                                 </div>
                                 <div class="input-group">
-                                    <label for="stayStrongQuoteInput">Jadilah Kuat (Quote)</label>
+                                    <label for="stayStrongQuoteInput">Kesan kesan atau quotes</label>
                                     <div class="input-wrapper"><textarea id="stayStrongQuoteInput" class="input-field" rows="3" placeholder="Masukkan quote jadilah kuat..."></textarea></div>
                                 </div>
                             </div>
