--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 <div class="message-card"><i class="fas fa-heart card-icon"></i><h2 class="card-title">Teruntuk kamu di hari yang istimewah</h2><p class="card-text" id="stayStrongQuoteText"></p></div>
             </div>
             <div class="gift-section-card message-card" id="giftSectionCard">
-                <h2 class="card-title">Ada Sesuatu Untukmu...</h2>
+                <h2 class="card-title">waitt, there's a gift for you...</h2>
                 <button class="btn gift-btn" onclick="openGift()"><i class="fas fa-gift"></i> Klaim Hadiahmu</button>
             </div>
         </div>
