--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             </div>
             <div class="gift-section-card message-card" id="giftSectionCard">
                 <h2 class="card-title">waitt, there's a gift for you...</h2>
-                <button class="btn gift-btn" onclick="openGift()"><i class="fas fa-gift"></i> Klaim Hadiahmu</button>
+                <button class="btn gift-btn" onclick="openGift()"><i class="fas fa-gift"></i> Accept your gift!</button>
             </div>
         </div>
     </div>
