--- a/login.html
+++ b/login.html
@@ -377,7 +377,7 @@
             </div>
             <div class="input-group">
                 <i class="fas fa-user icon"></i>
-                <input type="text" id="username" placeholder="Username Kamu">
+                <input type="text" id="username" placeholder="Username">
             </div>
             <div class="input-group">
                 <i class="fas fa-lock icon"></i>
