--- a/admin.html
+++ b/admin.html
@@ -530,7 +530,7 @@
                 });
 
                 if (isValid) {
-                    showFeedback('success', 'Login Berhasil', 'Mengarahkan ke panel kontrol...');
+                    showFeedback('success', 'Login Berhasil', 'Mengarahkan ke panel setting...');
                     setTimeout(() => {
                         hideFeedback();
                         authContainer.classList.add('is-active');
