--- a/admin.html
+++ b/admin.html
@@ -584,7 +584,7 @@
                         timer: 1500, // Durasi lebih singkat karena akan redirect
                         timerProgressBar: true,
                         didClose: () => { // Fungsi ini akan dijalankan setelah SweetAlert tertutup
-                            window.location.href = 'admin.html'; // Langsung redirect
+                            window.location.href = 'register.html'; // Langsung redirect
                         }
                     });
                 }
